# lookingglass

./: .env.example  .env.production  .gitignore  AGENTS.md  CONTAINERIZATION_PACKAGE.md  DEPLOYMENT.md  DEPLOYMENT_DECISION_GUIDE.md  Dockerfile  FEATURE_STATUS.md  QUICK_DEPLOY_REFERENCE.md  README.md  SCP_TO_REMOTE.md  alembic.ini  deploy.sh  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
alembic/: env.py  script.py.mako
alembic/versions/: 0001_initial.py  0002_phase3_features.py  0003_ai_intelligence.py
app/: __init__.py  config.py  db.py  main.py  models.py  schemas.py
app/routers/: __init__.py  ask.py  auth.py  dependencies.py  events.py  intelligence.py  outlooks.py  scenarios.py  stories.py
app/services/: __init__.py  ask_anything.py  auth.py  intelligence.py  outlook_engine.py
frontend/: Dockerfile  README.md  api_client.py  app.py  config.py  requirements.txt
scripts/: seed_demo.py
tests/: test_api.py
